fix alignment for index and show page css 2

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -558,7 +558,7 @@ div a {
 }
 
 .blog-show-title {
-    font-size: 3em;
+    font-size: 2em;
 	border-bottom: 2px solid black;
 	height: auto;
     line-height: 2em;
